--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,13 +19,14 @@
 
     <TextView
         android:text="TextView"
-        android:layout_width="match_parent"
+        android:layout_width="@android:dimen/thumbnail_width"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="false"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="123dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textSize="44sp"
         android:id="@+id/ShowDownloadText"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:layout_width="match_parent" />
 
     <WebView
         android:layout_width="match_parent"
